<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">WordFormed</string>
    <string name="high_score_title">High Scores</string>
	<string name="main_title">WordFormed</string>
	<string name="new_game_label">New Game</string>
	<string name="multiplayer_label">Start multiplayer game</string>
	<string name="high_scores_label">High scores</string>
	<string name="how_to_play_label">How to play</string>
	<string name="single_player_title">Single Player Game</string>
	<string name="how_to_play_title">How to play</string>
	<string name="multiplayer_game_title">Multiplayer Game</string>
	<string name="how_to_play_text">This game is based on the popular scrabble game.\n(More text here) \n\n\n<b>Developers:</b> Owen Corrigan and David Kernan.</string>
	<string name="highscore1">"Owen"</string>
	<string name="nick1">"123"</string>
	<string name="highscore2">"Owen"</string>
	<string name="nick2">"123"</string>
	<string name="highscore3">"Owen"</string>
	<string name="nick3">"123"</string>
	<string name="highscore4">"Owen"</string>
	<string name="nick4">"123"</string>
	<string name="highscore5">"Owen"</string>
	<string name="nick5">"123"</string>
	<string name="highscore6">"Owen"</string>
	<string name="nick6">"123"</string>
	<string name="highscore7">"Owen"</string>
	<string name="nick7">"123"</string>
	<string name="highscore8">"Owen"</string>
	<string name="nick8">"123"</string>
	<string name="highscore9">"Owen"</string>
	<string name="nick9">"123"</string>
	<string name="highscore10">"Owen"</string>
	<string name="nick10">"123"</string>
	<string name="highscore11">"Owen"</string>
	<string name="nick11">"123"</string>
	<string name="highscore12">"Owen"</string>
	<string name="nick12">"123"</string>
	<string name="highscore13">"Owen"</string>
	<string name="nick13">"123"</string>
	<string name="highscore14">"Owen"</string>
	<string name="nick14">"123"</string>
	<string name="highscore15">"Owen"</string>
	<string name="nick15">"123"</string>
	<string name="highscore16">"Owen"</string>
	<string name="nick16">"123"</string>
	<string name="highscore17">"Owen"</string>
	<string name="nick17">"123"</string>
	<string name="highscore18">"Owen"</string>
	<string name="nick18">"123"</string>
	<string name="highscore19">"Owen"</string>
	<string name="nick19">"123"</string>
	<string name="highscore20">"Owen"</string>
	<string name="nick20">"123"</string>
</resources>
