<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:background="@color/background"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:padding="50dip"
    android:orientation="vertical" >
    
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >
        
	    <TextView
			  android:id="@+id/CustomFontText"
	          android:layout_width="wrap_content"
	          android:layout_height="wrap_content"
	          android:layout_gravity="center"
	          android:layout_marginBottom="25dip"
	          android:text="@string/main_title"
	          android:textSize="35.5sp" 
			  android:paddingTop="12sp"	          
			/>
	    <Button 
	        android:background="@drawable/button"
	        android:id="@+id/new_game_button"
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:text="@string/new_game_label"
	        android:textSize="17sp"
	        android:src="@drawable/button"
	        android:paddingTop="12sp"
	        />
	    
	    <Button 
	        android:background="@drawable/button"
	        android:id="@+id/multiplayer_button"
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:text="@string/multiplayer_label"
	       	android:textSize="17sp"
	        android:paddingTop="12sp"
	        />

	    <Button 
	        android:background="@drawable/button"
	        android:id="@+id/how_to_play_button"
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:text="@string/how_to_play_label"
   	        android:textSize="17sp"	        
	        android:paddingTop="12sp"
	        />
	    <Button
	        android:background="@drawable/button"
	        android:id="@+id/high_scores_button"
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:text="@string/high_scores_label"
	        android:textSize="17sp"
	        android:paddingTop="12sp"
	        />
	</LinearLayout>
</LinearLayout>
